0.06 Mon Jan 24 2011
    - Only require ExtUtils::MakeMaker 6.12, to make things easier on
      people running Perl 5.8.

0.05 Fri Jan 07 2011
    - Make irand() and rand() 2.5x faster.
    - Now, if you specify $Math::Random::Secure::RNG before
      calling srand(), the "seeder" of $Math::Random::Secure::RNG
      will be used by srand() instead of srand() overriding the seeder
      and using the default one found by Math::Random::Secure::RNG.
    - Remove META.yml, in an attempt to make CPAN.pm install this
      module properly (this is an attempt to force CPAN.pm to read the dynamic
      dependencies for this module).

0.04 Wed Jan 05 2011
    - Require Crypt::Random::Source 0.07 to avoid various bugs and
      warnings.
    - Fix the version requirements for Windows so that CPAN will install
      the proper prerequisites there.

0.03 Thu Dec 30 2011
    - Clear the seed after the first call to rand() or irand(), so
      that an attacker can't inspect the state of the RNG to determine
      the seed.
    - Only seed ourselves with 64 bytes (512 bits) intead of 1024 bytes
      (8192 bits). The author of ISAAC says that this is safe.
    - Add POD explaining seed sizes and the importance of seed randomness.
    - Warn users if they pass in a bad seed or set seed_size too small.
    - Fix some small code and POD issues (thanks to LpSolit)

0.02 Wed Dec 29 2011
    - Remove the modulo bias from irand().
    - Add a test that proves the uniformity of generated values.
    - Update the POD quite a bit.

0.01 Tue Dec 28 2011
    - First release. Uses ISAAC as a backend and Crypt::Random::Source
      for seed data.