@@ -22,7 +22,7 @@ copyright_year = 2010
 Math::Random::ISAAC = 1.0.1
 ; 0.07 fixes a lot of important bugs and warnings.
 Crypt::Random::Source = 0.07
-Any::Moose = 0
+Moo = 2
 
 [Prereqs / TestRequires]
 Test::More = 0
