@@ -1,3 +1,8 @@
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+    - Switch from Any::Moose to Moo
+
 0.06 Mon Jan 24 2011
     - Only require ExtUtils::MakeMaker 6.12, to make things easier on
       people running Perl 5.8.
